Modified setup script to allow only surface series

--- a/Mountains-Statistical-Addons.vcxproj
+++ b/Mountains-Statistical-Addons.vcxproj
@@ -232,7 +232,7 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="AddonEntity.cpp" />
+    <ClCompile Include="AddonStorage.cpp" />
     <ClCompile Include="src\MountainsStatisticalAddons.cpp" />
     <ClCompile Include="src\controller\MountainsStatisticalAddonsCtrl.cpp" />
     <ClCompile Include="src\MountainsStatisticalAddonsPropPage.cpp" />
@@ -244,7 +244,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AddonEntity.h" />
+    <ClInclude Include="AddonStorage.h" />
     <ClInclude Include="src\AddonDispatchID.h" />
     <ClInclude Include="src\MountainsStatisticalAddons.h" />
     <ClInclude Include="src\controller\MountainsStatisticalAddonsCtrl.h" />
